--- a/get_next_line/Makefile
+++ b/get_next_line/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mhahn <mhahn@student.42.fr>                +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/02/15 20:04:10 by mhahn             #+#    #+#              #
+#    Updated: 2022/02/15 20:04:13 by mhahn            ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 # The name of the library to create.
 NAME		=	libgnl.a
 
